feat: database , QueryFilter